2003-10-20  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in: *BSD compatibility fix (thanks to Patrick Powell
	  from LPRng).

2003-10-09  David Suffield <david.suffield@hp.com>

	* Added new printers to db/source/printer/
	  HP-Color_LaserJet_3500.xml HP-DeskJet_3520.xml
	  HP-DeskJet_3528.xml HP-DeskJet_3550.xml HP-DeskJet_3558.xml
	  HP-DeskJet_3650.xml HP-DeskJet_3658.xml HP-DeskJet_3668.xml
	
2003-10-08  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Samsung-ML-1650.xml, printer/Samsung-ML-1651N.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml,
	  driver/ljet4.xml, driver/lj4dith.xml, driver/Postscript.xml,
	  opt/159.xml, opt/160.xml, opt/pjl-Samsung-ML-1650-RET.xml,
	  opt/pjl-Samsung-ML-1650-MediaType.xml,
	  opt/pjl-Samsung-ML-1650-Economode.xml,
	  opt/pjl-Samsung-ML-1650-AllowReprint.xml,
	  opt/pxlmono-PrinterResolution.xml: Added Samsung ML-1650 and
	  1651N.

2003-10-03  David Suffield <david.suffield@hp.com>

        * Added new printers to db/source/printer/
	  HP-DeskJet_5158.xml HP-DeskJet_5160.xml HP-DeskJet_5650.xml
	  HP-DeskJet_5670.xml HP-DeskJet_5850.xml HP-DeskJet_9600.xml
	  HP-OfficeJet_4100.xml HP-OfficeJet_5500.xml
	  HP-OfficeJet_6100.xml HP-OfficeJet_6150.xml
	  HP-OfficeJet_7100.xml HP-PhotoSmart_140.xml
	  HP-PhotoSmart_240.xml HP-PhotoSmart_7260.xml
	  HP-PhotoSmart_7268.xml HP-PhotoSmart_7660.xml
	  HP-PhotoSmart_7760.xml HP-PhotoSmart_7960.xml HP-PSC_1300.xml
	  HP-PSC_2170.xml HP-PSC_2300.xml HP-PSC_2400.xml HP-PSC_2500.xml

	  Updated url in db/source/printer/HP-DeskJet_5150.xml

2003-10-02  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_635.xml, printer/HP-PSC_500.xml,
	  printer/HP-OfficeJet_R60.xml, printer/HP-OfficeJet_710.xml,
	  printer/HP-OfficeJet_600.xml,
	  printer/HP-OfficeJet_Pro_1170C.xml,
	  printer/HP-OfficeJet_R45.xml, printer/HP-OfficeJet_T65.xml,
	  printer/HP-OfficeJet_Pro_1150C.xml,
	  printer/HP-LaserJet_3200.xml, printer/HP-OfficeJet_T45.xml,