@@ -3,6 +3,14 @@
 	* configure.in: *BSD compatibility fix (thanks to Patrick Powell
 	  from LPRng).
 
+	* driver/ljetplus.xml, driver/ljet4.xml, driver/ljet4d.xml,
+	  driver/ljet3.xml, driver/ljet3d.xml, driver/ljet2p.xml,
+	  driver/lj4dithp.xml, driver/laserjet.xml, driver/cljet5.xml:
+	  Applied patch from Patrick Powell to let the Perl one-liner for
+	  the paper tray selection not read from newline to newline but
+	  from ESC to ESC. This prevents from too long "lines" being read
+	  into memory.
+
 2003-10-09  David Suffield <david.suffield@hp.com>
 
 	* Added new printers to db/source/printer/
